# symbol-skel-cpp

./: CMakeLists.txt  README.md
cli/: .gitignore  CMakeLists.txt  main.cpp
cmake/Modules/: FindMY_PROJECT.cmake  FindRESTCCPP.cmake  FindSYMBOL.cmake  FindSYMBOLCORE.cmake  FindSYMBOLRPC.cmake
scripts/: configure.sh  sync.sh
src/: .gitignore  CMakeLists.txt  Hmi.cpp  Hmi.h  MyHmi.cpp  MyHmi.h  config.h.in  core.h
test/: main.cpp
