cmake_minimum_required(VERSION 3.14)
#----------------------------------
#Main tweaking section

set(PRJNAME symbolskel)
set(PRJVERSION 1.0)
#----------------------------------
project(${PRJNAME} VERSION ${PRJVERSION})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(src)
add_subdirectory(cli)

